styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;

body{
  background-color: #ffffff;
}
.text_primary {
  @apply text-primary font-spartan
}

.absolute_center{
    position: absolute;
    left: 50%;
    transform: translate(-50%, 0);
}

.stroke{
  -webkit-text-stroke: black 1px;
  text-wrap: nowrap !important;
}

.about-img{
  border-radius: 36% 7% 6% 7% / 37% 7% 9% 8% ;
}
.about-details{
  border-radius: 9% 7% 6% 20% / 9% 9% 9% 22%;
  box-shadow: 7px 5px 32px 4px rgba(0,0,0,0.09);
-webkit-box-shadow: 7px 5px 32px 4px rgba(0,0,0,0.09);
-moz-box-shadow: 7px 5px 32px 4px rgba(0,0,0,0.09);
}
.text-shine{
    color: #FFF;
    background: linear-gradient(to right, #BB9A34 0, rgb(255, 245, 245) 15%, #BB9A34 25%);
    background-position: 0;
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    animation: shine 3.5s infinite linear;
    font-weight: 500;
    text-decoration: none;
}

@keyframes shine {
    0%{
        background-position: 0;
    }
    100%{
        background-position: 6.6svw;
    }
}

/* From Uiverse.io by vk-uiux */ 
#checkbox {
  display: none;
}

.toggle {
  position: relative;
  width: 40px;
  cursor: pointer;
  margin: auto;
  display: block;
  height: calc(4px * 3 + 11px * 2);
}

.bar {
  position: absolute;
  left: 0;
  right: 0;
  height: 4px;
  border-radius: calc(4px / 2);
  background: #BB9A34;
  color: inherit;
  opacity: 1;
  transition: none 0.35s cubic-bezier(.5,-0.35,.35,1.5) 0s;
}

/***** Collapse Animation *****/

.bar--top {
  bottom: calc(50% + 11px + 4px/ 2);
  transition-property: bottom,margin,transform;
  transition-delay: calc(0s + 0.35s),0s,0s;
}

.bar--middle {
  top: calc(50% - 4px/ 2);
  transition-property: top,opacity;
  transition-duration: 0.35s,0s;
  transition-delay: calc(0s + 0.35s * 1.3),calc(0s + 0.35s * 1.3);
}

.bar--bottom {
  top: calc(50% + 11px + 4px/ 2);
  transition-property: top,transform;
  transition-delay: 0s;
}

#checkbox:checked + .toggle .bar--top {
  bottom: calc(50% - 11px - 4px);
  margin-bottom: calc(11px + 4px/ 2);
  transform: rotate(45deg);
  transition-delay: calc(0s + 0.35s * .3),calc(0s + 0.35s * 1.3),calc(0s + 0.35s * 1.3);
}

#checkbox:checked + .toggle .bar--middle {
  top: calc(50% + 11px);
  opacity: 0;
  transition-duration: 0.35s,0s;
  transition-delay: 0s,calc(0s + 0.35s);
}

#checkbox:checked + .toggle .bar--bottom {
  top: calc(50% - 4px/ 2);
  transform: rotate(-45deg);
  transition-delay: calc(0s + 0.35s * 1.3),calc(0s + 0.35s * 1.3);
}

/*SLIDER CSS*/

